Improve inline documentation for intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <head>
 <!-- TODO: improve accessibility -->
