Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -10,6 +10,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Enhancement: add SEO metadata -->
 
   <!-- Site Properties -->
 <!-- Enhancement: add SEO metadata -->
