Document refactoring opportunity in app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- Main application template with router outlet -->
 <app-intro></app-intro>
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
