--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-intro></app-intro>
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
