Document refactoring opportunity in app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -17,6 +17,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
+# Note: Consider refactoring approach
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
