--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -2,3 +2,4 @@
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # TODO: Code review and optimization needed
+# TODO: Code review and optimization needed
