Improve inline documentation for app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
