Add TODO for enhancement in intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -5,6 +5,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <head>
+<!-- TODO: improve accessibility -->
   <!-- Standard Meta -->
 <!-- Note: consider responsive design -->
   <meta charset="utf-8" />
