Add performance note to app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -6,6 +6,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
