Add code review comment to app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-intro></app-intro>
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
