--- a/lukehalleyPortfolio/src/styles.css
+++ b/lukehalleyPortfolio/src/styles.css
@@ -17,6 +17,7 @@
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
 # TODO: Code review and optimization needed
