--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -6,6 +6,7 @@
 # TODO: Code review and optimization needed
 # Enhancement: Add comprehensive tests
 # Enhancement: Add comprehensive tests
+# Enhancement: Add comprehensive tests
 # TODO: Code review and optimization needed
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
