--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -5,6 +5,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
