--- a/lukehalleyPortfolio/src/styles.css
+++ b/lukehalleyPortfolio/src/styles.css
@@ -10,6 +10,7 @@
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # Enhancement: Add comprehensive tests
+# TODO: Code review and optimization needed
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
