--- a/lukehalleyPortfolio/src/styles.css
+++ b/lukehalleyPortfolio/src/styles.css
@@ -1,2 +1,3 @@
 /* Global styles and CSS variables for consistent theming */
 /* You can add global styles to this file, and also import other style files */
+# Note: Consider refactoring approach
