Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -16,6 +16,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
 
   <!-- Site Properties -->
 <!-- Enhancement: add SEO metadata -->
