--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -6,6 +6,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
+<!-- Note: consider responsive design -->
 <head>
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
