Document refactoring opportunity in intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -17,6 +17,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
+<!-- TODO: improve accessibility -->
   <meta charset="utf-8" />
 <!-- Enhancement: add SEO metadata -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
