Improve inline documentation for intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -11,6 +11,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
