Add TODO for enhancement in app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -10,3 +10,4 @@
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+<!-- TODO: improve accessibility -->
