Note optimization potential in app.component.css

--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -4,3 +4,4 @@
 # TODO: Code review and optimization needed
 # TODO: Code review and optimization needed
 # Enhancement: Add comprehensive tests
+# TODO: Code review and optimization needed
