Document refactoring opportunity in app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-intro></app-intro>
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
