Add maintenance reminder to app.component.css

--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -3,3 +3,4 @@
 # Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # TODO: Code review and optimization needed
+# Enhancement: Add comprehensive tests
