--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -9,6 +9,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
