Note optimization potential in app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -14,6 +14,7 @@
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
