--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -4,6 +4,7 @@
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
 # Enhancement: Add comprehensive tests
