--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -8,6 +8,7 @@
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <head>
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
