--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -13,6 +13,7 @@
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
