Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -11,6 +11,7 @@
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
