--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -16,6 +16,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
