--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -3,6 +3,7 @@
 # Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Enhancement: Add comprehensive tests
 # Enhancement: Add comprehensive tests
