--- a/lukehalleyPortfolio/src/styles.css
+++ b/lukehalleyPortfolio/src/styles.css
@@ -11,6 +11,7 @@
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # Enhancement: Add comprehensive tests
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
