--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -10,6 +10,7 @@
 <head>
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
