Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -9,6 +9,7 @@
 <!-- Note: consider responsive design -->
 <head>
 <!-- Note: consider responsive design -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
