--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -10,6 +10,7 @@
 <!-- TODO: improve accessibility -->
   <!-- Standard Meta -->
 <!-- Note: consider responsive design -->
+<!-- Enhancement: add SEO metadata -->
   <meta charset="utf-8" />
 <!-- Enhancement: add SEO metadata -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
