Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -9,6 +9,7 @@
 <head>
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+<!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
