Add performance note to app.component.css

--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -1,3 +1,4 @@
 /* Root component styles for layout and positioning */
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# TODO: Code review and optimization needed
