Add performance note to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -12,6 +12,7 @@
 <!-- Enhancement: add SEO metadata -->
 
   <!-- Site Properties -->
+<!-- Enhancement: add SEO metadata -->
   <title>Homepage - Semantic</title>
   <style type="text/css">
 
