Add maintenance reminder to app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -4,3 +4,4 @@
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
+<!-- Note: consider responsive design -->
