--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
