Document refactoring opportunity in app.component.css

--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -2,6 +2,7 @@
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # TODO: Code review and optimization needed
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Enhancement: Add comprehensive tests
 # TODO: Code review and optimization needed
