--- a/lukehalleyPortfolio/src/styles.css
+++ b/lukehalleyPortfolio/src/styles.css
@@ -2,3 +2,4 @@
 /* You can add global styles to this file, and also import other style files */
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# TODO: Code review and optimization needed
