--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -7,6 +7,7 @@
 <!-- Note: consider responsive design -->
 <head>
 <!-- Enhancement: add SEO metadata -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
   <!-- Standard Meta -->
 <!-- Note: consider responsive design -->
