Add TODO for enhancement in intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -5,6 +5,7 @@
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
+<!-- Note: consider responsive design -->
 <head>
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
