--- a/lukehalleyPortfolio/src/styles.css
+++ b/lukehalleyPortfolio/src/styles.css
@@ -13,6 +13,7 @@
 # Enhancement: Add comprehensive tests
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
