--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -4,6 +4,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
