--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -14,6 +14,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
