Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -6,6 +6,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <head>
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
   <!-- Standard Meta -->
 <!-- Note: consider responsive design -->
