--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -14,6 +14,7 @@
 # TODO: Code review and optimization needed
 # Enhancement: Add comprehensive tests
 # Note: Consider refactoring approach
+# Note: Consider refactoring approach
 # Enhancement: Add comprehensive tests
 # TODO: Code review and optimization needed
 # TODO: Code review and optimization needed
