--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -17,6 +17,7 @@
 # Enhancement: Add comprehensive tests
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# TODO: Code review and optimization needed
 # Enhancement: Add comprehensive tests
 # TODO: Code review and optimization needed
 # TODO: Code review and optimization needed
