Document refactoring opportunity in app.component.html

--- a/lukehalleyPortfolio/src/app/app.component.html
+++ b/lukehalleyPortfolio/src/app/app.component.html
@@ -13,6 +13,7 @@
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
+<!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
