Improve inline documentation for intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -15,6 +15,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
