--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -16,6 +16,7 @@
   <!-- Standard Meta -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
   <meta charset="utf-8" />
 <!-- Enhancement: add SEO metadata -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
