Add TODO for enhancement in intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -4,6 +4,7 @@
 <html>
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+# TODO: Code review and optimization needed
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
