Note optimization potential in intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html>
+# Note: Consider refactoring approach
 <!-- TODO: improve accessibility -->
 # TODO: Code review and optimization needed
 <!-- TODO: improve accessibility -->
