Add code review comment to intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <!-- TODO: improve accessibility -->
+# TODO: Code review and optimization needed
 <!-- TODO: improve accessibility -->
 # TODO: Code review and optimization needed
 <!-- Note: consider responsive design -->
