--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -14,6 +14,7 @@
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 # TODO: Code review and optimization needed
+# TODO: Code review and optimization needed
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
