--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -15,6 +15,7 @@
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
+# TODO: Code review and optimization needed
 <!-- Enhancement: add SEO metadata -->
 # TODO: Code review and optimization needed
 <!-- Note: consider responsive design -->
