--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -16,6 +16,7 @@
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+# TODO: Code review and optimization needed
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
