--- a/lukehalleyPortfolio/src/app/app.component.css
+++ b/lukehalleyPortfolio/src/app/app.component.css
@@ -6,6 +6,7 @@
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
 # Note: Consider refactoring approach
+# Note: Consider refactoring approach
 # TODO: Code review and optimization needed
 # Note: Consider refactoring approach
 # Enhancement: Add comprehensive tests
