Document refactoring opportunity in intro.component.html

--- a/lukehalleyPortfolio/src/app/intro/intro.component.html
+++ b/lukehalleyPortfolio/src/app/intro/intro.component.html
@@ -11,6 +11,7 @@
 <head>
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
+# TODO: Code review and optimization needed
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
 <!-- Note: consider responsive design -->
